# numerous-sdk

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  KEYRING_FALLBACK.md  MANIFEST.in  Makefile  PYTEST_FAILURES_SUMMARY.md  PYTEST_FINAL_RESULTS.md  README.md  VALIDATION_README.md  WSL_README.md  go.mod  go.sum  gqlgen.yml  linkedin-post.md  main.go  mkdocs.yml  pyproject.toml  quick-validate.sh  requirements.txt  run-local-wsl.sh  validate-task-workflow.sh
.github/workflows/: cicd.yml  release.yml  validate.yml
assets/: assets.go
assets/spa/: index.html
cli/: .gitignore  go.mod  go.sum  main.go
cli/app/: deploy.go  deploy_test.go  mock.go
cli/appdev/: app_definition.go  app_definition_test.go  diff.go  diff_test.go  output.go  parse.go  repositories_test.go  repository.go  service_test.go  test_repository.go
cli/appdevsession/: apprunner.go  filewatch.go  session.go  session_test.go
cli/auth/: authenticator.go  credentials.go  device_code_state.go  device_code_state_test.go  refresh_access_token_test.go  revoke_refresh_token.go  revoke_refresh_token_test.go  settings.go  user.go  user_test.go  wait_until_user_logs_in.go  wait_until_user_logs_in_test.go
cli/cmd/: deploy.go  root.go  validate.go  validate_test.go
cli/cmd/app/: app.go
cli/dotenv/: dotenv.go  dotenv_test.go
cli/graphql/: convert.go  generated.go  resolver.go  schema.resolvers.go
cli/keyring/: keyring.go  keyring_test.go
cli/logging/: loglevel.go  loglevel_test.go
cli/manifest/: manifest.go  manifest_test.go  validate_app.go
cli/server/: server.go
cli/test/: app_id_document_helper.go  copy.go  gql_client.go  gqlvalidation.go  graphql.go  http_transport.go  query_response_helpers.go  tempfile.go
cli/tool/: library.go  library_test.go  tool.go  tool_test.go
cmd/: root.go
cmd/app/: cmd.go
cmd/args/: appdir.go  appdir_test.go  appident.go  subcmd.go  subcmd_test.go
cmd/config/: cmd.go
cmd/delete/: delete_test.go
cmd/deletecmd/: cmd.go  delete.go  delete_test.go  mock.go
cmd/deploy/: cmd.go  deploy.go  deploy_graphql.go  deploy_test.go  mock.go
cmd/dev/: dev.go
cmd/download/: cmd.go  download.go  download_test.go  mock.go
cmd/errorhandling/: errors.go
cmd/group/: group.go
cmd/init/: bootstrap.go  bootstrap_test.go  cmd.go  files.go  files_test.go  initialize.go  initialize_test.go  prepare.go
cmd/initialize/: bootstrap.go  bootstrap_test.go  cmd.go  files.go  files_test.go  init.go  prepare.go
cmd/legacy/: cmd.go
cmd/list/: list.go  table.go
cmd/login/: cmd.go  login.go  login_test.go
cmd/logout/: cmd.go  logout.go  logout_test.go
cmd/logs/: cmd.go  logs.go  logs_test.go  mock.go
cmd/organization/: cmd.go  organization.go
cmd/output/: colors.go  error.go  notify.go  ok.go  plot.go  plot_test.go  symbols.go  task.go  task_test.go  term.go
cmd/publish/: publish.go
cmd/push/: build_events_test.go  push.go  push_test.go  stop_jobs.go
cmd/report/: report.go  report_test.go
cmd/root/: cmd.go  logo.go  prerun.go
cmd/status/: cmd.go  duration.go  duration_test.go  mock.go  since.go  since_test.go  status.go  status_test.go
cmd/task/: cmd.go  list.go  list_test.go  run.go  run_test.go  task.go  validate.go  validate_test.go
cmd/token/: cmd.go
cmd/unpublish/: unpublish.go  unpublish_test.go
cmd/usage/: app_directory_arg.go  app_identifier.go
cmd/version/: check.go  check_test.go  cmd.go  mock.go
docs/: README.md  TASKS_DOCUMENTATION_REVIEW.md  TASK_SESSION_CLARIFICATION.md  api.md  cli.md  collection_bulk_operations.md  collection_documents.md  collection_files.md  collections.md  frameworks.md  github-actions.md  introducing-numerous-tasks.md  organization.md  secrets.md  sessions.md  tasks.md  user.md  using_the_sdk_locally.md
examples/numerous/: action.py  container.py  fields.py  html.py  importing.py  parameters.py  plot.py  sliders.py  syntax.py
examples/validator/: README.md
internal/app/: app_create.go  app_create_test.go  app_delete.go  app_delete_test.go  app_deploy.go  app_deploy_log_entry.go  app_deploy_logs.go  app_deploy_logs_test.go  app_deploy_test.go  app_deployment_read.go  app_list.go  app_list_test.go  app_read.go  app_read_test.go  app_share.go  app_share_test.go  app_unshare.go  app_unshare_test.go  app_workloads_list.go  app_workloads_list_test.go  current_app_version.go  current_app_version_test.go  deploy_events.go  deploy_events_test.go  errors.go  service.go  stub.go  task_input.go  task_input_test.go  task_instance_get.go  task_instance_get_test.go  task_instance_logs.go  task_instance_logs_test.go  task_instances_list.go  task_start.go  task_start_test.go  task_stop.go  task_stop_test.go  tasks.go  tasks_test.go  (+9 more)
internal/appdev/: app_session.go  app_session_test.go  log.go  parse_test.go  service.go
internal/appdevsession/: apprunner.go  command.go  filewatch_test.go  session.go  session_test.go
internal/appident/: app_identifier.go  app_identifier_test.go  errors.go  get_appidentifier.go  get_appidentifier_test.go  validate.go  validate_test.go
internal/archive/: exclude.go  exclude_test.go  tar.go  tar_test.go  zip_test.go
internal/auth/: authenticator.go  authenticator_mock.go  device_code_state_test.go  file_storage.go  file_storage_test.go  refresh_access_token.go  refresh_access_token_test.go  revoke_refresh_token_test.go  settings.go  token_storage.go  user.go  user_test.go  wait_until_user_logs_in.go  wait_until_user_logs_in_test.go
internal/config/: config.go  config_dir.go  config_dir_darwin.go  config_dir_linux.go  config_dir_windows.go  config_file.go  config_load.go  config_load_test.go  config_organization_slug.go  config_organization_slug_test.go  config_print.go  config_print_test.go  config_save.go  config_save_test.go
internal/dir/: appid.go  appid_test.go
internal/dotenv/: dotenv.go  dotenv_test.go
internal/gql/: api.go  api_test.go  client.go  subscription_client.go
python/: queries.gql
scripts/: build_dists.sh  gen_ref_pages.py
shared/: schema.gql
templates/: CHANGELOG.md.j2
testdata/: streamlit_app.tar
(+594 files in other folders)
