[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numerous"
readme = "README.md"
version = "0.4.2"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "typing-extensions==4.9.0",
    "ariadne-codegen[subscriptions]==0.12.0",
    "plotly>4",
    "packaging==24.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "ruff",
    "mypy==1.8.0",
    "coverage==7.4.0",
    "twine==5.0.0",
    "marimo==0.3.12",
    "pydantic==2.7",
    "types-setuptools>=69.5.0",
    "build==1.2.1",
]

[project.scripts]
numerous = "numerous.cli:main"

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.ruff]
exclude = [
    "./python/src/numerous/generated/",
    "./setup.py",
    "./python/docs",
    "./examples",
    "./cli/**",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "D101",
    "D103",
    "D107",
    "D203",
    "D211",
    "D212",
    "FA100",
    "FA102",
    "ISC001",
    "COM812",
]

[tool.ruff.lint.extend-per-file-ignores]
"python/tests/**" = ["INP001", "S101", "D100", "D103"]

[tool.ariadne-codegen]
schema_path = "../shared/schema.gql"
queries_path = "queries.gql"
target_package_name = "graphql"
target_package_path = "src/numerous/generated"

[tool.mypy]
exclude = ["build", "setup.py", ".*venv.*", "examples"]
ignore_missing_imports = true

[tool.semantic_release]
branch = "main"
commit_parser = "angular"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Merged? .*''',
    '''initial commit''',
]
