[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numerous"
readme = "README.md"
version = "0.16.0"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "typing-extensions==4.12.2",
    "ariadne-codegen[subscriptions]==0.14.0",
    "plotly>4",
    "packaging==24.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.4",
    "mypy==1.11.2",
    "coverage==7.6.1",
    "twine==5.1.1",
    "marimo==0.8.14",
    "pydantic==2.9",
    "types-setuptools>=74.1.0",
    "build==1.2.2",
]

[project.scripts]
numerous = "numerous.cli:main"

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.ruff]
exclude = [
    "./python/src/numerous/generated/",
    "./setup.py",
    "./python/docs",
    "./examples",
    "./internal/**",
    "./cmd/**",
    "./testdata/**",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "D101",
    "D103",
    "D107",
    "D203",
    "D211",
    "D212",
    "FA100",
    "FA102",
    "ISC001",
    "COM812",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["numerous"]

[tool.ruff.lint.flake8-pytest-style]
# defaults changes in 0.6.0 which gives some issues
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.extend-per-file-ignores]
"python/tests/**" = ["INP001", "S101", "D100", "D103"]

[tool.ariadne-codegen]
schema_path = "../shared/schema.gql"
queries_path = "queries.gql"
target_package_name = "graphql"
target_package_path = "src/numerous/generated"

[tool.mypy]
ignore_missing_imports = true

[tool.semantic_release]
branch = "main"
commit_parser = "angular"
version_toml = ["pyproject.toml:project.version"]
template_dir = "templates"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Merged? .*''',
    '''initial commit''',
]
