[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numerous"
readme = "docs/README.md"
version = "0.48.0"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "typing-extensions>=4.12.2",
    "requests>=2.32.3",
    "httpx>=0.23,<0.28.0",
    "pydantic>=2.9.0,<2.10.0",
    "websockets>=0.11",
    "pathspec",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "freezegun==1.4.0",
    "ruff==0.6.4",
    "mypy==1.11.2",
    "types-requests>=2.32.0",
    "coverage==7.6.1",
    "twine==5.1.1",
    "marimo==0.8.14",
    "types-setuptools>=74.1.0",
    "build==1.2.2",
    # for generating GraphQL client code from schema
    "ariadne-codegen[subscriptions]>=0.14.0",
    # for docs
    "mkdocs==1.6.0",
    "mkdocstrings==0.26.2",
    "mkdocstrings-python==1.12.2",
    "mkdocs_snippet_plugin==1.0.2",
    "mkdocs-material==9.5.46",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-section-index==0.3.9",
    "mkdocs-literate-nav==0.6.1",
    # for testing functionality related to frameworks
    "flask",
    "fastapi",
    "marimo",
    "streamlit",
    "dash",
    "panel",
]

[project.scripts]
numerous = "numerous._cli:main"

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.ruff]
src = ["python/src"]
exclude = [
    "./python/src/numerous/_client/graphql",
    "./setup.py",
    "./python/docs",
    "./internal/**",
    "./cmd/**",
    "./testdata/**",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "D101",
    "D103",
    "D107",
    "D203",
    "D211",
    "D212",
    "FA100",
    "FA102",
    "ISC001",
    "COM812",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.flake8-pytest-style]
# defaults changes in 0.6.0 which gives some issues
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.extend-per-file-ignores]
"python/tests/**" = ["INP001", "S101", "D100", "D103"]

[tool.ariadne-codegen]
schema_path = "../shared/schema.gql"
queries_path = "queries.gql"
target_package_name = "graphql"
target_package_path = "src/numerous/_client"

[tool.mypy]
ignore_missing_imports = true

[tool.semantic_release]
branch = "main"
commit_parser = "angular"
version_toml = ["pyproject.toml:project.version"]
template_dir = "templates"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Merged? .*''',
    '''initial commit''',
]
